# Dice

./: CMakeLists.txt  README.md
include/ae2fLib/Dice/: Dice.h  Dice.hpp  Dice.md  README.md
src/: Dice.c  bullshit.h
